# Persona-Scenario-Agents-Demo-Creator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: __init__.py  schema.py
app/routes/: __init__.py  approve.py  generate.py  retrieve.py  update.py
app/services/: __init__.py  blueprint.py  llm.py  prompts.py  session.py  tavily.py  tracing.py
outputs/: finance_blueprint.json  healthcare_blueprint.json  logistics_blueprint.json  retail_blueprint.json
scripts/: demo_finance.sh  demo_healthcare.sh  demo_logistics.sh  demo_retail.sh  validate_live.py
tests/: conftest.py  test_llm_retry.py  test_routes.py  test_schema.py  test_session.py
