[project]
name = "persona-scenario-agents-demo-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic==0.39.0",
    "dotenv>=0.9.9",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "pip>=26.0.1",
    "pydantic==2.9.2",
    "pytest>=8.4.2",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.30.6",
]
